updating html so that I can include rendered HTML in the README

--- a/figures/tables/verify_properties_tibble_kable.html
+++ b/figures/tables/verify_properties_tibble_kable.html
@@ -280,7 +280,7 @@ border: 0;
 
 </head>
 <body>
-<table class="table lightable-classic" style="font-size: 14px; width: auto !important; margin-left: auto; margin-right: auto; font-family: Times New Roman; margin-left: auto; margin-right: auto;">
+<table class="table lightable-classic" style="font-size: 14px; color: black; width: auto !important; margin-left: auto; margin-right: auto; color: black; font-family: Times New Roman; margin-left: auto; margin-right: auto;">
 <caption style="font-size: initial !important;"><div style="text-align: center; font-size: 20px;">
   <strong>Geometric Properties Verification</strong>
 </div></caption>
